--- a/eindopdracht/index.html
+++ b/eindopdracht/index.html
@@ -18,7 +18,7 @@
 
         <section class="menu">
             <button id="copyBtn"><img src="./images/copy.svg" alt=""></button>
-            <button id="pasteBtn"><img src=./images/paste.svg" alt=""></button>
+            <button id="pasteBtn"><img src="./images/paste.svg" alt=""></button>
             <button id="voice-button"><img src="./images/voice.svg" alt=""></button>
         </section>
     </main>
